--- a/WebPages/Demo.Master
+++ b/WebPages/Demo.Master
@@ -4,13 +4,21 @@
 
 <html>
 <head runat="server">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <title>Home</title>
 
     <%--jQuery first, then popper, then bootstrap--%>
-    <script src="../Scripts/jQuery/jQuery-3.4.1.js"></script>
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="../Scripts/bootstrap-4.4.1/js/bootstrap.js"></script>
-    <link rel="stylesheet" href="../Scripts/bootstrap-4.4.1/css/bootstrap.css" />
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>  
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -20,22 +28,25 @@
 <body>
     <form id="form1" runat="server">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="~/WebPages/Home.aspx">ComnputerShare Demo</a>
+            <a class="navbar-brand" href="/WebPages/Home.aspx">ComnputerShare Demo</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav justify-content-center">
                     <li class="nav-item active">
-                        <a runat="server" class="nav-link" href="~/WebPages/Home.aspx">Home <span class="sr-only">(current)</span></a>
+                        <a runat="server" class="nav-link" href="~/WebPages/Home.aspx">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a runat="server" class="nav-link" href="~/WebPages/Fancy.aspx">Fancy Page</a>
                     </li>
                 </ul>
             </div>
         </nav>
 
         <asp:ScriptManager ID="ScriptManager" runat="server" ScriptMode="Release"></asp:ScriptManager>
-        
+
         <div>
             <asp:ContentPlaceHolder ID="MainBody" runat="server">
             </asp:ContentPlaceHolder>
