--- a/Style/Custom.css
+++ b/Style/Custom.css
@@ -60,11 +60,12 @@ ul {
     .days li {
         list-style-type: none;
         display: inline-block;
-        width: 13%;
+        width: 13.9%;
         text-align: center;
         margin-bottom: 5px;
         font-size: 12px;
         color: #777;
+        cursor: pointer;
     }
 
         /* Highlight the "current" day */
@@ -77,11 +78,13 @@ ul {
 .buy {
     padding: 5px;
     background-color: darkgreen;
-    color: white !important
+    color: white !important;
+    cursor: default !important;
 }
 
 .sell {
     padding: 5px;
     background-color: darkgoldenrod;
-    color: white !important
+    color: white !important;
+    cursor: default !important;
 }
