--- a/Style/Custom.css
+++ b/Style/Custom.css
@@ -68,6 +68,10 @@ ul {
         cursor: pointer;
     }
 
+        .days li:hover {
+            background: #A5A5A5 !important;
+        }
+
         /* Highlight the "current" day */
         .days li .active {
             padding: 5px;
